# SoE-Companion-v1.0.0

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml
docs/: hook-drop-event-log.md  release-v1.1.0.md  release-v1.1.8.md  soe-13-new-items-filter-codes.txt
native/drop-hook-source/: .gitignore  README.md  ijl11.def  ijl11_grail.cpp
public/soe-wiki-cache/: index.html
scripts/: regenerate-holy-grail-static.cjs  verify-drops-tracker-timers.mjs  verify-gsf-tracker.mjs
src/: App.svelte  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/resources/: DropIdentified.ini  Hiim_SOE.filter
src-tauri/src/: character_levels.rs  d2types.rs  drop_hook.rs  grail_log.rs  hook_log.rs  hotkeys.rs  injection.rs  items_cache.rs  kill_counter.rs  loot_filter_hook.rs  loot_history.rs  main.rs  notifier.rs  offsets.rs  process.rs  runeword_planner.rs  save_exit_automation.rs  settings.rs  soe_filter.rs  sounds.rs  updater.rs
src-tauri/src/rules/: dsl.rs  explain.rs  matching.rs  mod.rs
src/components/: DropsTrackerHookPanel.svelte  IdentifiedDropsPanel.svelte  ItemSoundsPanel.svelte  LootHistoryPanel.svelte  Notification.svelte  NotificationStack.svelte  OverlayEditGrid.svelte  SetupWizard.svelte  SubTabs.svelte  Tabs.svelte  ThemeToggle.svelte  UpdateButton.svelte  index.ts
src/editor/: RulesEditor.svelte  d2rules-autocomplete.ts  d2rules-language.ts  d2rules-linter.ts
src/lib/: achievements.ts  drop-tracker-categories.ts  filterblade-sounds.ts  grail-item-details.ts  gsf-item-catalog.ts  (+13 more)
(+44 files in other folders)
