[package]
name = "soe-companion"
version = "1.1.11"
description = "Sanctuary of Exile companion app for grail tracking, drops, achievements, filters, sounds, and overlays"
authors = []
license = ""
repository = ""
edition = "2021"

[[bin]]
name = "soe-companion"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
regex = "1"
semver = "1"
ureq = { version = "2", features = ["json"] }
self_update = { version = "0.41", default-features = false, features = ["rustls", "archive-zip"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Memory",
  "Win32_System_IO",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
incremental = true
